--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,17 @@
           <input placeholder="0000" id="project_id" type="text" class="validate">
           <label for="project_id">Project ID</label>
         </div>
-        <div class="col s4 offset-s6 input-field">
+        <div class="col s6 offset-s2 input-field">
+          <div class="card blue-grey darken-1">
+            <div class="card-content white-text">
+              <p>Welcome to keyvalue. Use this in your games, apps or on the web. It's simple, easy to use and fun! Start by browsing the quick guide.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">Quick guide</a>
+              <a href="#">SDK</a>
+              <a href="#">Documentation</a>
+            </div>
+          </div>
         </div>
       </div>
 		</div>
@@ -41,7 +51,8 @@
           <input placeholder="My awesome game" id="value_0" type="text" class="validate">
           <label for="value_0">Value</label>
         </div>
-        <div class="col s2">
+        <div class="col s2 input-field">
+          <a class="btn-floating btn red"><i class="material-icons">delete</i></a>
         </div>
       </div>
       <div class="row">
@@ -53,7 +64,8 @@
           <input placeholder="Don't go yet!" id="value_1" type="text" class="validate">
           <label for="value_1">Value</label>
         </div>
-        <div class="col s2">
+        <div class="col s2 input-field">
+          <a class="btn-floating btn red"><i class="material-icons">delete</i></a>
         </div>
       </div>
 		</div>
