Added basic project page design.

--- a/web/projects.html
+++ b/web/projects.html
@@ -23,6 +23,57 @@
   	</div>
   </header>
   <main>
+    <div class="container">
+      <div class="row">
+          <div class="col s4">
+            <div class="card">
+              <div class="card-image">
+                <img src="images/sample.jpg">
+                <span class="card-title">Project Title</span>
+              </div>
+              <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information.
+                I am convenient because I require little markup to use effectively.</p>
+              </div>
+              <div class="card-action">
+                <a href="255">Edit</a>
+                <a href="#">Delete</a>
+              </div>
+            </div>
+          </div>
+          <div class="col s4">
+            <div class="card">
+              <div class="card-image">
+                <img src="images/sample.jpg">
+                <span class="card-title">Project Title</span>
+              </div>
+              <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information.
+                I am convenient because I require little markup to use effectively.</p>
+              </div>
+              <div class="card-action">
+                <a href="256">Edit</a>
+                <a href="#">Delete</a>
+              </div>
+            </div>
+          </div>
+          <div class="col s4">
+            <div class="card">
+              <div class="card-image">
+                <img src="images/sample.jpg">
+                <span class="card-title">New Project</span>
+              </div>
+              <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information.
+                I am convenient because I require little markup to use effectively.</p>
+              </div>
+              <div class="card-action">
+                <a href="257">Create</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
   </main>
 	<footer class="page-footer orange">
 		<div class="container">
