--- a/web/project.html
+++ b/web/project.html
@@ -27,31 +27,26 @@
   		<div class="section" id ="project">
         <div class="row">
           <div class="col s2 input-field">
-            <input placeholder="0000" id="project_id" type="text" class="validate">
-            <label for="project_id">Project ID</label>
-          </div>
-          <div class="col s6 offset-s2 input-field">
-            <div class="card blue-grey darken-1">
-              <div class="card-content white-text">
-                <p>Welcome to keyvalue. Use this in your games, apps or on the web. It's simple, easy to use and fun! Start by browsing the quick guide.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">Quick guide</a>
-                <a href="#">SDK</a>
-                <a href="#">Documentation</a>
-              </div>
-            </div>
+              <input placeholder="0000" id="project_id" type="text" class="validate">
+              <label for="project_id">ID</label>
           </div>
         </div>
+        <div class="row">
+          <div class="col s2 input-field">
+              <input placeholder="My awesome game" id="project_title" type="text" class="validate">
+              <label for="project_title">Title</label>
+          </div>
+        </div>
+
   		</div>
   		<div class="section" id ="data">
         <div class="row">
           <div class="col s2 input-field">
-            <input placeholder="title" id="key_0" type="text" class="validate">
+            <input placeholder="tooltip" id="key_0" type="text" class="validate">
             <label for="key_0">Key</label>
           </div>
           <div class="col s8 input-field">
-            <input placeholder="My awesome game" id="value_0" type="text" class="validate">
+            <input placeholder="Try clicking on something!" id="value_0" type="text" class="validate">
             <label for="value_0">Value</label>
           </div>
           <div class="col s2 input-field">
@@ -74,7 +69,7 @@
   		</div>
       <div class="section" id="control">
         <div class="row">
-          <div class="col s2 offset-s10 right-align input-field">
+          <div class="col s2 offset-s8 right-align input-field">
             <a class="btn" id="save">Save</a>
           </div>
         </div>
