--- a/web/edit.html
+++ b/web/edit.html
@@ -14,7 +14,7 @@
   <header>
   	<nav class="light-blue lighten-1" role="navigation">
   		<div class="nav-wrapper container">
-  		  <a id="logo-container" href="#" class="brand-logo">key value</a>
+  		  <a id="logo-container" href="." class="brand-logo">key value</a>
   		</div>
   	</nav>
   	<div class="section no-pad-bot" id="index-banner">
