--- a/web/projects.html
+++ b/web/projects.html
@@ -31,34 +31,35 @@
             <div class="card">
               <check if="{{ @project.create }}">
               <true>
-                <div class="card-content">New Project</div>
+                <div class="card-content">
+                  <div class="row">
+                    <div class="col s12">
+                      <h5>New Project</h5>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col s12 grey-text lighten-2-text">
+                      Project Description
+                    </div>
+                  </div>
+                </div>
                 <div class="card-action">
                   <a class="modal-trigger" href="#create">Create</a>
-                  <div id="create" class="modal">
-                    <div class="modal-content">
-                      <form action="create" method="post">
-                        <div class="row">
-                          <div class="col s12">
-                            <h4>Create new project</h4>
-                          </div>
-                        </div>
-                        <div class="row">
-                          <div class="input-field col s12">
-                            <input id="title" type="text" name="project_title" class="validate">
-                            <label for="title">Project title</label>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="modal-footer">
-                        <button class="modal-action modal-close waves-effect waves-green btn-flat" type="submit">Create</button>
-                      </div>
-                    </form>
-                  </div>
                 </div>
               </true>
               <false>
               <div class="card-content">
-                {{ @project.title }}
+                <div class="row">
+                  <div class="col s12">
+                    <h5>{{ @project.title }}</h5>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s12 grey-text lighten-2-text">
+                    {{ @project.description }}
+                  </div>
+                </div>
+                
               </div>
               <div class="card-action">
                 <a href="{{ @project.id }}">Edit</a>
@@ -72,6 +73,32 @@
         </div>
         </repeat>
       </div>
+    </div>
+    <div id="create" class="modal">
+      <form action="create" method="post">
+        <div class="modal-content">
+          <div class="row">
+            <div class="col s12">
+              <h4>Create new project</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="title" type="text" name="project_title" class="validate">
+              <label for="title">Project title</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="description" type="text" name="project_description" class="validate">
+              <label for="description">Project description</label>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button class="modal-action modal-close waves-effect waves-green btn-flat" type="submit">Create</button>
+        </div>
+      </form>
     </div>
     </main>
     <footer class="page-footer orange">
