--- a/web/projects.html
+++ b/web/projects.html
@@ -49,9 +49,9 @@
               </true>
               <false>
               <div class="card-content">
-                <div class="row">
+                <div class="row valign-wrapper">
                   <div class="col s12">
-                    <h5>{{ @project.title }}</h5>
+                    <h5>{{ @project.title }} <span class="badge new">{{ @project.count == 0 ? 'Project empty' : '' }}</span></h5>
                   </div>
                 </div>
                 <div class="row">
