--- a/web/edit.html
+++ b/web/edit.html
@@ -1,96 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-	<title>kv</title>
-
-	<!-- CSS	-->
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-	<link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-</head>
-<body>
-  <header>
-  	<nav class="light-blue lighten-1" role="navigation">
-  		<div class="nav-wrapper container">
-  		  <a id="logo-container" href="." class="brand-logo">key value</a>
-  		</div>
-  	</nav>
-  	<div class="section no-pad-bot" id="index-banner">
-  		<div class="container" id="title">
-  		</div>
-  	</div>
-  </header>
-  <main>
-  	<div class="container" id ="content">
-  		<div class="section" id ="project">
-        <div class="row">
-          <div class="col s2 input-field">
-              <input placeholder="0000" id="project_id" type="text" class="validate">
-              <label for="project_id">ID</label>
-          </div>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+    <title>kv</title>
+    <!-- CSS  -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  </head>
+  <body>
+    <header>
+      <nav class="light-blue lighten-1" role="navigation">
+        <div class="nav-wrapper container">
+          <a id="logo-container" href="." class="brand-logo">key value</a>
         </div>
-        <div class="row">
-          <div class="col s2 input-field">
-              <input placeholder="My awesome game" id="project_title" type="text" class="validate">
-              <label for="project_title">Title</label>
-          </div>
-        </div>
-
-  		</div>
-  		<div class="section" id ="data">
-        <div class="row">
-          <div class="col s2 input-field">
-            <input placeholder="tooltip" id="key_0" type="text" class="validate">
-            <label for="key_0">Key</label>
-          </div>
-          <div class="col s8 input-field">
-            <input placeholder="Try clicking on something!" id="value_0" type="text" class="validate">
-            <label for="value_0">Value</label>
-          </div>
-          <div class="col s2 input-field">
-            <a class="btn-floating btn red"><i class="material-icons">delete</i></a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col s2 input-field">
-            <input placeholder="quit_message" id="key_1" type="text" class="validate">
-            <label for="key_1">Key</label>
-          </div>
-          <div class="col s8 input-field">
-            <input placeholder="Don't go yet!" id="value_1" type="text" class="validate">
-            <label for="value_1">Value</label>
-          </div>
-          <div class="col s2 input-field">
-            <a class="btn-floating btn red"><i class="material-icons">delete</i></a>
-          </div>
-        </div>
-  		</div>
-      <div class="section" id="control">
-        <div class="row">
-          <div class="col s2 offset-s8 right-align input-field">
-            <a class="btn" id="save">Save</a>
-          </div>
+      </nav>
+      <div class="section no-pad-bot" id="index-banner">
+        <div class="container" id="title">
         </div>
       </div>
-  	</div>
-  </main>
-	<footer class="page-footer orange">
-		<div class="container">
-		</div>
-		<div class="footer-copyright">
-			<div class="container">
-			Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-			</div>
-		</div>
-	</footer>
-
-
-	<!--	Scripts-->
-	<script src="js/jquery.min.js"></script>
-	<script src="js/materialize.js"></script>
-	<script src="js/init.js"></script>
-
-	</body>
+    </header>
+    <main>
+    <div class="container" id ="content">
+      <form action="update" method="post">
+        <div class="section" id ="project">
+          <div class="row">
+            <div class="col s2 input-field">
+              <input disabled value="{{ @project.id }}" name="project_id" type="text" class="validate">
+              <label for="project_id">ID</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s2 input-field">
+              <input value="{{ @project.title }}" name="project_title" type="text" class="validate">
+              <label for="project_title">Title</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s10 input-field">
+              <textarea id="project_description" class="materialize-textarea validate" name="project_description">{{ trim(@project.description) }}</textarea>
+              <label for="project_description">Description</label>
+            </div>
+          </div>
+        </div>
+        <div class="section" id ="data">
+          <repeat group="{{ @project.keys }}" key="{{ @key }}" value="{{ @value }}" counter="{{ @index }}">
+          <div class="row">
+            <div class="col s2 input-field">
+              <input id="key_{{@index}}" type="text" class="validate" name="keys[]" value="{{@key}}">
+              <label for="key_{{@index}}">Key</label>
+            </div>
+            <div class="col s8 input-field">
+              <input placeholder="Try clicking on something!" id="value_{{@index}}" type="text" class="validate" name="values[]"  value="{{@value}}">
+              <label for="value_{{@index}}">Value</label>
+            </div>
+            <div class="col s2 input-field">
+              <a class="btn-floating btn red"><i class="material-icons">delete</i></a>
+            </div>
+          </div>
+          </repeat>
+          <div class="row">
+            <div class="col s2 input-field">
+              <input placeholder="player_enter" type="text" class="validate" name="keys[]">
+              <label>Key</label>
+            </div>
+            <div class="col s8 input-field">
+              <input placeholder="Tonight we dine in hell!" type="text" class="validate" name="values[]">
+              <label>Value</label>
+            </div>
+          </div>
+        </div>
+        <div class="section" id="control">
+          <div class="row">
+            <div class="col s2 offset-s8 right-align input-field">
+              <button class="btn" type="submit">Save</button>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+    </main>
+    <footer class="page-footer orange">
+      <div class="container">
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+          Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+        </div>
+      </div>
+    </footer>
+    <!--  Scripts-->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/materialize.js"></script>
+    <script src="js/init.js"></script>
+  </body>
 </html>
