--- a/web/edit.html
+++ b/web/edit.html
@@ -27,20 +27,20 @@
         <div class="section" id ="project">
           <div class="row">
             <div class="col s2 input-field">
-              <input disabled value="{{ @project.id }}" name="project_id" type="text" class="validate">
-              <label for="project_id">ID</label>
+              <input value="{{ @project.id }}" name="project.id" type="text" class="validate">
+              <label>ID</label>
             </div>
           </div>
           <div class="row">
             <div class="col s2 input-field">
-              <input value="{{ @project.title }}" name="project_title" type="text" class="validate">
-              <label for="project_title">Title</label>
+              <input value="{{ @project.title }}" name="project.title" type="text" class="validate">
+              <label>Title</label>
             </div>
           </div>
           <div class="row">
             <div class="col s10 input-field">
-              <textarea id="project_description" class="materialize-textarea validate" name="project_description">{{ trim(@project.description) }}</textarea>
-              <label for="project_description">Description</label>
+              <textarea id="project_description" class="materialize-textarea validate" name="project.description">{{ trim(@project.description) }}</textarea>
+              <label>Description</label>
             </div>
           </div>
         </div>
