--- a/web/edit.html
+++ b/web/edit.html
@@ -27,19 +27,20 @@
         <div class="section" id ="project">
           <div class="row">
             <div class="col s2 input-field">
-              <input value="{{ @project.id }}" name="project.id" type="text" class="validate">
+              <input disabled value="{{ @project.id }}" type="text" class="validate">
+              <input value="{{ @project.id }}" name="project[id]" type="hidden" class="validate">
               <label>ID</label>
             </div>
           </div>
           <div class="row">
             <div class="col s2 input-field">
-              <input value="{{ @project.title }}" name="project.title" type="text" class="validate">
+              <input value="{{ @project.title }}" name="project[title]" type="text" class="validate">
               <label>Title</label>
             </div>
           </div>
           <div class="row">
             <div class="col s10 input-field">
-              <textarea id="project_description" class="materialize-textarea validate" name="project.description">{{ trim(@project.description) }}</textarea>
+              <textarea id="project_description" class="materialize-textarea validate" name="project[description]">{{ trim(@project.description) }}</textarea>
               <label>Description</label>
             </div>
           </div>
@@ -48,11 +49,11 @@
           <repeat group="{{ @project.keys }}" key="{{ @key }}" value="{{ @value }}" counter="{{ @index }}">
           <div class="row">
             <div class="col s2 input-field">
-              <input id="key_{{@index}}" type="text" class="validate" name="keys[]" value="{{@key}}">
+              <input id="key_{{@index}}_new" type="text" class="validate" name="{{ keys.@key.new }}" value="{{@key}}">
               <label for="key_{{@index}}">Key</label>
             </div>
             <div class="col s8 input-field">
-              <input placeholder="Try clicking on something!" id="value_{{@index}}" type="text" class="validate" name="values[]"  value="{{@value}}">
+              <input placeholder="Try clicking on something!" id="value_{{@index}}" type="text" class="validate" name="{{ keys.@value }}"  value="{{@value}}">
               <label for="value_{{@index}}">Value</label>
             </div>
             <div class="col s2 input-field">
@@ -62,11 +63,11 @@
           </repeat>
           <div class="row">
             <div class="col s2 input-field">
-              <input placeholder="player_enter" type="text" class="validate" name="keys[]">
+              <input placeholder="player_enter" type="text" class="validate" name="keys.new[]">
               <label>Key</label>
             </div>
             <div class="col s8 input-field">
-              <input placeholder="Tonight we dine in hell!" type="text" class="validate" name="values[]">
+              <input placeholder="Tonight we dine in hell!" type="text" class="validate" name="values.new[]">
               <label>Value</label>
             </div>
           </div>
