Added setting new keys.

--- a/web/projects.html
+++ b/web/projects.html
@@ -84,19 +84,19 @@
           </div>
           <div class="row">
             <div class="input-field col s12">
-              <input id="title" type="text" name="project_title" class="validate">
+              <input id="title" type="text" name="project_title" required class="validate" placeholder="My awesome game">
               <label for="title">Project title</label>
             </div>
           </div>
           <div class="row">
             <div class="input-field col s12">
-              <input id="description" type="text" name="project_description" class="validate">
+              <input id="description" type="text" name="project_description" class="validate" placeholder="It's a game about poo!">
               <label for="description">Project description</label>
             </div>
           </div>
         </div>
         <div class="modal-footer">
-          <button class="modal-action modal-close waves-effect waves-green btn-flat" type="submit">Create</button>
+          <button class="waves-effect waves-green btn-flat" type="submit">Create</button>
         </div>
       </form>
     </div>
