--- a/web/edit.html
+++ b/web/edit.html
@@ -34,7 +34,7 @@
           </div>
           <div class="row">
             <div class="col s2 input-field">
-              <input value="{{ @project.title }}" name="project[title]" type="text" class="validate">
+              <input value="{{ @project.title }}" name="project[title]" type="text" class="validate" required>
               <label>Title</label>
             </div>
           </div>
