Project adding through ajax.

--- a/web/ui/projects/project-card.html
+++ b/web/ui/projects/project-card.html
@@ -16,7 +16,7 @@
       </div><!-- Card content - END -->
       <!-- Card action footer -->
       <div class="card-action white">
-        <a id="{{ project.id }}" class="edit waves-effect waves-teal btn-flat blue-grey-text"><i class="material-icons left">mode_edit</i>EDIT</a>
+        <a href="{{ project.id }}/" class="edit waves-effect waves-teal btn-flat blue-grey-text"><i class="material-icons left">mode_edit</i>EDIT</a>
         <a id="{{ project.id }}" class="delete waves-effect waves-red btn-flat right blue-grey-text"><i class="material-icons left">delete</i>DELETE</a>
       </div>
       <!-- End of Card -->
