--- a/web/ui/projects/project-card.html
+++ b/web/ui/projects/project-card.html
@@ -1,5 +1,5 @@
 <div class="project col s12 m6 l4 ">
-  <div class="card hoverable blue-grey">
+  <div class="card hoverable {{ project.color }}">
     <!-- Card content -->
     <div class="card-content">
       <!-- Card title -->
