--- a/web/ui/projects/project-card.html
+++ b/web/ui/projects/project-card.html
@@ -1,24 +1,15 @@
-<div class="project col s12 m6 l4 ">
-  <div class="card hoverable {{ project.color }}">
-    <!-- Card content -->
-    <div class="card-content">
-      <!-- Card title -->
-      <span class="card-title">
-        <h5 class="truncate">{{ project.title }}
-        {{#if project.empty}}
-          <span class="badge blue-grey lighten-4 blue-grey-text text-darken-2">Project empty</span>
-        {{/if}}
-        </h5>
-      </span>
-      <div class="section">
-        <p class="white-text">{{ project.description }}</p>
-      </div>
-      </div><!-- Card content - END -->
-      <!-- Card action footer -->
-      <div class="card-action white">
-        <a href="{{ project.id }}/" class="edit waves-effect waves-teal btn-flat blue-grey-text"><i class="material-icons left">mode_edit</i>EDIT</a>
-        <a id="{{ project.id }}" class="delete waves-effect waves-red btn-flat right blue-grey-text"><i class="material-icons left">delete</i>DELETE</a>
-      </div>
-      <!-- End of Card -->
+<div class="project mdl-cell mdl-cell--4-col">
+  <div class="mdl-card mdl-shadow--2dp project-card">
+    <div class="mdl-card__title mdl-card--expand">
+      <h2 class="mdl-card__title-text">{{ project.title }}</h2>
+    </div>
+    <div class="mdl-card__supporting-text">
+      {{ project.description }}
+    </div>
+    <div class="mdl-card__actions mdl-card--border">
+      <a class="mdl-button mdl-js-button mdl-js-ripple-effect">
+        Edit
+      </a>
     </div>
   </div>
+</div>
